--- a/project1/styles/style.css
+++ b/project1/styles/style.css
@@ -1,195 +1,51 @@
-body, html {
-  width: 100%;
-  height: 100%;
-  margin: 10px;
-  padding: 10px; }
-
-header {
-  background-color: lightgrey;
-  text-align: center;
-  height: 50px;
-  bottom: 50%;
-  content: "";
-  line-height: 50px;
-  margin-bottom: 20px; }
-
-
-
-#cardSectionHeader {
-  position: relative;
-  font-weight: bold;
-  margin-bottom: 50px; }
-
-.hitOrStayClass {
+#playerCardSection {
+  width: 20%;
   float: left;
-  border: 1px solid black;
-  width: 45%;
-  height: 8%;
-  margin-left: 20px;
-  margin-bottom: 5px; }
+  margin-left: 20px; }
 
-.genPlpyerCardsClass {
-  border: 1px solid black;
+#dealerCardSection {
+  width: 20%;
   float: left;
-  width: 75%;
-  margin-top: 10px;
-  margin-left: 100px;
-  text-align: center;
-  height: 8%; }
+  margin-left: 20px; }
 
-#getPlayerCards {
-  text-align: center;
-  margin-top: 5px;
-  height: 50px;
-  background-color: #85a38c;
-  font-weight: bold; }
-
-.genDealerCardsClass {
-  border: 1px solid black;
+#playerScore {
+  width: 100px;
+  clear: both;
   float: left;
-  width: 75%;
-  margin-top: 10px;
-  margin-left: 100px;
-  text-align: center;
-  height: 8%;
-  margin-bottom: 10px; }
+  margin-right: 150px;
+  width: 40px; }
 
-#stayButton {
-  background-color: lightgrey;
-  height: 20px;
-  width: 50%;
-  margin-left: 95px;
-  margin-top: 15px; }
-
-#hitButton {
-  background-color: lightgrey;
-  height: 20px;
-  width: 50%;
-  margin-left: 95px;
-  margin-top: 15px; }
-
-#dealerCardButton1 {
-  text-align: center;
-  margin-top: 5px;
-  height: 50px;
-  background-color: #85a38c;
-  font-weight: bold; }
-
-#displayDealerTotal {
-  margin-top: 50px; }
-
-#wrapper {
-  border: 1px;
-  margin-top: 0px;
-  width: 90%;
-  height: 100%;
-  position: relative; }
-
-.card1 {
-  text-align: center;
-  border: 1px solid black;
-  width: 32%;
-  height: 20%;
-  float: left;
-  margin-bottom: 20px;
-  margin-left: 5px;
-  background-color: #c1eeff; }
-
-.card2 {
-  text-align: center;
-  position: relative;
-  border: 1px solid black;
-  width: 32%;
-  clear: right;
-  bottom: 200px;
-  float: left;
-  top: 0px;
-  display: inline-block;
-  height: 20%;
-  margin-bottom: 0px;
-  margin-left: 5px;
-  background-color: #c1eeff; }
-
-.playerCard3 {
-  text-align: center;
-  border: 1px solid black;
-  color: black;
-  width: 32%;
-  height: 20%;
-  float: left;
-  clear: right;
-  display: inline-block;
-  margin-bottom: 20px;
-  margin-left: 5px;
-  background-color: #a4de9b; }
-
-#cardButton2 {
-  margin-top: 0px; }
-
-.playerTotal {
-  text-align: center;
-  border: 1px solid black;
-  color: black;
-  width: 32%;
-  height: 20%;
-  float: left;
-  clear: right;
-  display: inline-block;
-  margin-bottom: 20px;
-  margin-left: 5px;
-  background-color: #a4de9b; }
-
-
-.dealerTotal{
-  float: left;
-  margin-right: 5px;
-  text-align: center;
-  position: relative;
-  margin: 1px;
-  background-color: #a4de9b;
-  clear: right;
-  width: 32.3%;
-  height: 25%;
-  border: 1px solid black;
-  margin-bottom: 20px;
-}
-
-.dealerClass {
-  float: left;
-  margin-right: 5px;
-  text-align: center;
-  position: relative;
-  margin: 1px;
-  background-color: #c1eeff;
-  clear: right;
-  width: 32.3%;
-  height: 25%;
-  border: 1px solid black;
-  margin-bottom: 20px; }
-
-.foot {
-  text-align: center;
-  height: 15%;
-  background-color: grey;
-  clear: left;
-  margin-top: 0px;
-  margin-bottom: 10px;
-  position: relative;
+.buttonClass {
   border: 1px solid black; }
 
-.dealerScore {
-  width: 25%;
+.resultsClass {
   border: 1px solid black;
-  height: 48%;
+  height: 20%;
+  height: 200px; }
+
+#playerScore {
   clear: both;
   float: left;
-  margin-bottom: 1px; }
+  text-align: right;
+  width: 50px; }
 
-.playerScore {
-  width: 25%;
-  border: 1px solid black;
-  height: 48%;
-  clear: both;
-  float: left; }
+.scoreClass {
+  width: 100%;
+  display: inline-block;
+  border: 1px solid black; }
+
+.chipClass {
+  width: 100%;
+  border: 1px solid lightgrey;
+  float: left;
+  display: inline-block;
+  position: relative; }
+
+#playerChips {
+  width: 200px;
+  float: left;
+  text-align: left;
+  margin-right: 0px;
+  border: 1px solid black; }
 
 /*# sourceMappingURL=style.css.map */
