--- a/project1/styles/style.scss
+++ b/project1/styles/style.scss
@@ -32,6 +32,7 @@
   border: 1px solid black;
   height: 20%;
   height: 200px;
+  border: 1px solid black;
 }
 #playerScore{
   clear: both;
@@ -51,7 +52,7 @@
 
 .chipClass{
   width: 100%;
-  border: 1px solid lightgrey;
+  border: 1px solid black;
   float: left;
   display: inline-block;
   position: relative;
@@ -67,5 +68,5 @@
   float: left;
   text-align: left;
   margin-right: 0px;
-  border: 1px solid black;
+  //border: 1px solid;
 }
